Fix padding on K-5 publish buttons so they don't wrap
fixes LS-2219
flag = canvas_for_elementary

Test plan:
  - Go to a K-5 subject course as a teacher or admin
  - Go to course settings
  - Publish the course (if not already published). Expect the
    "Unpublish" and "Published" buttons to stay inline and not wrap
  - Unpublish the course. Expect the "Unpublished" and "Publis"
    buttons to stay inline and not wrap
  - Go to a non-K-5 course and ensure the above is true on the course
    home page as well

Reviewed-on: https://gerrit.instructure.com/c/canvas-lms/+/264903
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>
QA-Review: Jackson Howe <jackson.howe@instructure.com>
Product-Review: Jeff Largent <jeff.largent@instructure.com>

--- a/app/stylesheets/components/_publish-state.scss
+++ b/app/stylesheets/components/_publish-state.scss
@@ -19,7 +19,8 @@
 /* publish buttons */
 .btn-publish,
 .btn-published,
-.btn-unpublish {
+.btn-unpublish,
+.btn-unpublished {
   transition: none;
   padding-#{direction(left)}: 9px;
 
@@ -57,7 +58,7 @@
   color: #fff;
 }
 
-.btn-unpublish {
+.btn-unpublished {
   @include buttonBackground($btnDangerBackground, $btnDangerBackgroundHighlight);
   box-shadow: none;
   &:focus { @include button-focus-dark; }
@@ -65,8 +66,8 @@
 
 .btn-published.disabled,
 .btn-published.disabled:hover,
-.btn-unpublish.disabled,
-.btn-unpublish.disabled:hover {
+.btn-unpublished.disabled,
+.btn-unpublished.disabled:hover {
   @if $use_high_contrast { opacity: 1; }
 }
 
